# bead3

./: .gitignore  CMakeLists.txt  app.cpp  app.hpp  colors.hpp  main.cpp
Widgets/: button.cpp  button.hpp  card.cpp  card.hpp  numericin.cpp  numericin.hpp  statictext.cpp  statictext.hpp  widget.cpp  widget.hpp
cards/: C10.bmp.kep  C2.bmp.kep  C3.bmp.kep  C4.bmp.kep  C5.bmp.kep  C6.bmp.kep  C7.bmp.kep  C8.bmp.kep  C9.bmp.kep  Ca.bmp.kep  Cj.bmp.kep  Ck.bmp.kep  Cq.bmp.kep  D10.bmp.kep  D2.bmp.kep  D3.bmp.kep  D4.bmp.kep  D5.bmp.kep  D6.bmp.kep  D7.bmp.kep  D8.bmp.kep  D9.bmp.kep  Da.bmp.kep  Dj.bmp.kep  Dk.bmp.kep  Dq.bmp.kep  H10.bmp.kep  H2.bmp.kep  H3.bmp.kep  H4.bmp.kep  H5.bmp.kep  H6.bmp.kep  H7.bmp.kep  H8.bmp.kep  H9.bmp.kep  Ha.bmp.kep  Hj.bmp.kep  Hk.bmp.kep  Hq.bmp.kep  S10.bmp.kep  (+12 more)
